<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".UI.CountCaseActivity"
    android:background="@drawable/bg_ui">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/launimage"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/ettcase"
        android:hint="Total Cases"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        tools:ignore="NotSibling" />





    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/btnupcase"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Update Cases Record"


        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Cases Recorded"
            android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvtotalcase"
        android:layout_gravity="center_horizontal"
        android:textSize="40dp" />



</LinearLayout>