...
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:id="@+id/btneventshome"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
...
            android:layout_height="120dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:id="@+id/btncasehome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
...
