<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.EventsActivity">

    <Button
        android:id="@+id/btnorganizeevents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Organize Event"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <Button
        android:id="@+id/btnshowevents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/btnorganizeevents"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="Show Events" />

</RelativeLayout>