<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".UI.MapsActivity" >
    <AutoCompleteTextView
        android:id="@+id/tvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Type location"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnSearchMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search"
        />

    <fragment
        android:id="@+id/map1"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

</LinearLayout>